# AI-Experiment

./: CMakeLists.txt  CMakePresets.json
include/Neuron/: Neuron.hpp  NeuronMap.hpp
lib/OpenCL-ICD-Loader-2024.10.24/: CMakeLists.txt
src/: main.cpp
src/Neuron/: Neuron.cpp  NeuronMap.cpp
